non-msrv-tests/tests/ui/no_trait.stderr
error: expected one of Clone, Copy, Debug, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize
 --> tests/ui/no_trait.rs:1:30
  |
1 | #[derive_where::derive_where("Clone")]
  |                              ^^^^^^^
