non-msrv-tests/tests/ui/no_trait.rs
#[derive_where::derive_where("Clone")]
struct Test<T>(T);

fn main() {}
